GTM OAuth 2 Release Notes

Project site:     http://code.google.com/p/gtm-oauth2/
Discussion group: http://groups.google.com/group/gtm-oauth2


20-June-2011

To avoid accidental leakage of tokens, the authentication object now
returns kGTMOAuth2ErrorUnauthorizableRequest when attempting to authorize
requests with schemes other than https. The property
shouldAuthorizeAllRequests can be set to override this and allow any
request to be authorized.


1-June-2011

Added Mac window controller property shouldAllowApplicationTermination

Added user properties to window & view controllers.

Fetchers may now optionally be created by a GTMHTTPFetcherService instance.


24-May-2011

Mac window controller now opens pop-up window links in an external browser
by default, and provides an externalRequestSelector property to let
the client provide custom handling.


4-May-2011

Addded support for services which provide access tokens, but no
refresh tokens.


Release 1.0.0
6-April-2011

Initial public release.


JSON notes:

This library currently relies on version 2.1.1 of SBJSON:

http://json-framework.googlecode.com/svn/tags/2.1.1/Source/

The latest version of SBJSON is avaiilable at http://stig.github.com/json-framework/
